Standardize feature descriptors and fix completions (#38833)
* Complete encrypt feature template contract

- Add missing encrypt workflow output schema fields
- Align encrypt prompt with assisted and LIKE query algorithm inputs
- Enforce template output fields in descriptor validation
- Cover completion targets, SPI registration, and secret-safe candidates
- Mark Speckit traceability tasks as complete

* Standardize feature descriptors and fix completions

- align feature descriptor content, style, and completion design across MCP feature modules
- fix feature plugin completions by using prompt targets instead of fixed resources
- add fallback plugin catalogs and regression coverage for readwrite-splitting, shadow, and sharding
- update MCP E2E baseline contract and validation to prevent static resource completion regressions

* Standardize feature descriptors and fix completions

- align feature descriptor content, style, and completion design across MCP feature modules
- fix feature plugin completions by using prompt targets instead of fixed resources
- add fallback plugin catalogs and regression coverage for readwrite-splitting, shadow, and sharding
- update MCP E2E baseline contract and validation to prevent static resource completion regressions